# cadmesh

./: .dockerignore  .gitignore  Additionl_instructions  Hda5_Converter.py  README.md  cloud_conversion.py  dockerfile  environment.yml  get_files.py  new_conversion_script.sh  pyproject.toml  setup.py  setup.py.bak  test.py
OCCUtils/: Common.py
cadmesh/: __init__.py  environment.yml
cadmesh/core/: statistics_dict_builder.py  step_processor.py
cadmesh/mesh/: mesh_builder.py
cadmesh/utils/: analysis.py  geometry.py  processing.py  yaml_conversion_script.sh
src/: cli.py  environment.yml  meta.yaml
src/cadmesh/: __init__.py  cloud_conversion.py
src/cadmesh/converters/: __init__.py  cloud_conversion.py  get_files.py  hdf5_converter.py
src/cadmesh/core/: entity_mapper.py  geometry_dict_builder.py  step_processor.py  topology_dict_builder.py
src/cadmesh/mesh/: mesh_builder.py
src/cadmesh/occutils/: __init__.py
src/cadmesh/utils/: geometry.py  logging.py  processing.py  topology.py
src/recipe/: meta.yaml
src/scripts/: run.sh
src/steptohdf5/: __init__.py  cli.py  cloud_conversion.py  environment.yml  processing.py
src/steptohdf5/OCCUtils/: Construct.py  Iteration.py  __init__.py  edge.py  face.py  shell.py  solid.py  vertex.py
src/steptohdf5/converters/: cloud_conversion.py  hdf5_converter.py
src/steptohdf5/core/: __init__.py  hdf5_converter.py  statistics_dict_builder.py  step_processor.py
src/steptohdf5/utils/: __init__.py  analysis.py  geometry.py  my_logging.py  processing.py
src/tests/: test_topology_dict_builder.py  utest_topology_dict_builder.py
tests/: utest_topology_dict_builder.py
v0/cadmesh/: __init__.py
